Fix Bar Spacing

--- a/style.css
+++ b/style.css
@@ -18,18 +18,16 @@ body {
 
 .nav-bar {
     display: flex;
-    flex-flow: row wrap;
-
-    max-width: 650px;
-    width: 40%;
-    margin: 5% auto;
+    width: 80%;
+    max-width: calc(100% - 24vw);
+    margin: 7vw auto;
 }
 
 .nav-link {
     flex: 1 1 20%;
     text-align: center;
 
-    font-size: 20px;
+    font-size: calc(8px + 1vw);
     color: white;
     text-decoration: none;
 }
